Removed FieldDict references and made some CMake changes

--- a/ESMF/MAPL/Aerosol_GridComp/Aerosol_StateSpecs.rc
+++ b/ESMF/MAPL/Aerosol_GridComp/Aerosol_StateSpecs.rc
@@ -1,5 +1,5 @@
 schema_version: 2.0.0
-component: DU
+component: Aerosol
 
 category: IMPORT
 #----------------------------------------------------------------------------------------
