--- a/ESMF/MAPL/Aerosol_GridComp/AeroCinderella_GridComp/AeroCinderella_StateSpecs.rc
+++ b/ESMF/MAPL/Aerosol_GridComp/AeroCinderella_GridComp/AeroCinderella_StateSpecs.rc
@@ -1,5 +1,5 @@
 schema_version: 2.0.0
-component: DU
+component: AeroCinderella
 
 category: IMPORT
 #----------------------------------------------------------------------------------------
