--- a/ESMF/Shared/CMakeLists.txt
+++ b/ESMF/Shared/CMakeLists.txt
@@ -4,6 +4,8 @@ endif()
 
 esma_add_subdirectories (
         MAPL
+        NCEP_Shared
+        GMAO_Shared
         Chem_Base
         Chem_Shared
 )
