--- a/ESMF/CMakeLists.txt
+++ b/ESMF/CMakeLists.txt
@@ -1,4 +1,11 @@
-add_subdirectory(Shared)
-add_subdirectory(Aerosol_GridComp)
-add_subdirectory(GOCART_GridComp)
+#add_subdirectory(Shared)
+#add_subdirectory(Aerosol_GridComp)
+#add_subdirectory(GOCART_GridComp)
 #add_subdirectory(NUOPC)
+
+esma_add_subdirectories(
+        Shared
+        Aerosol_GridComp
+        GOCART_GridComp
+#        HEMCO_GridComp
+)
