Setup to create a test program for Aerosol Project.

--- a/ESMF/CMakeLists.txt
+++ b/ESMF/CMakeLists.txt
@@ -1,6 +1,11 @@
+set (HEMCO_EXTERNAL_CONFIG TRUE)
+set (MAPL_ESMF TRUE)
+
 esma_add_subdirectories(
+        Apps
+        include
         Shared
         Aerosol_GridComp
         GOCART_GridComp
-#        HEMCO_GridComp
+        HEMCO_GridComp
 )
