--- a/components.yaml
+++ b/components.yaml
@@ -12,7 +12,7 @@ ecbuild:
 HEMCO:
   local: ./ESMF/HEMCO_GridComp@
   remote: ../HEMCO.git
-  tag: GEOS_12.8
+  tag: geos/v1.0.1
 
 NCEP_Shared:
   local: ./ESMF/Shared/NCEP_Shared@
