Populated set services with aerosol gridcomp wrapped by nuopc

--- a/ESMF/Apps/CMakeLists.txt
+++ b/ESMF/Apps/CMakeLists.txt
@@ -1,6 +1,6 @@
 ecbuild_add_executable(
         TARGET AerosolApp.x
         SOURCES AerosolMain.F90 AerosolDriver.F90
-        LIBS gftl-shared MAPL
+        LIBS gftl-shared MAPL Aerosol_GridComp
         INCLUDES ${esma_include}/NUOPC
 )
