Added MAPL-MAPL through NUOPC testing application.

--- a/ESMF/Apps/CMakeLists.txt
+++ b/ESMF/Apps/CMakeLists.txt
@@ -4,3 +4,10 @@ ecbuild_add_executable(
         LIBS gftl-shared MAPL Aerosol_GridComp
         INCLUDES ${esma_include}/NUOPC ${esma_include}/MAPL
 )
+
+ecbuild_add_executable(
+        TARGET MAPL-NUOPCApp.x
+        SOURCES MaplNuopcMain.F90 MaplNuopcDriver.F90 MaplProvide_GridComp.F90 MaplRecieve_GridComp.F90
+        LIBS gftl-shared MAPL
+        INCLUDES ${esma_include}/NUOPC ${esma_include}/MAPL
+)
