Fixed build issues

--- a/ESMF/CMakeLists.txt
+++ b/ESMF/CMakeLists.txt
@@ -8,5 +8,5 @@ esma_add_subdirectories(
         Shared
         Aerosol_GridComp
         GOCART_GridComp
-        HEMCO_GridComp
+#        HEMCO_GridComp
 )
