Added MAPL NUOPC application coupled through a mediator

--- a/ESMF/Apps/CMakeLists.txt
+++ b/ESMF/Apps/CMakeLists.txt
@@ -11,3 +11,10 @@ ecbuild_add_executable(
         LIBS gftl-shared MAPL
         INCLUDES ${esma_include}/NUOPC ${esma_include}/MAPL
 )
+
+ecbuild_add_executable(
+        TARGET MediatorApp.x
+        SOURCES MediatorMain.F90 MediatorDriver.F90 Mediator.F90 Mediator_Interpolator.F90 MaplProvide_GridComp.F90 MaplRecieve_GridComp.F90
+        LIBS gftl-shared MAPL
+        INCLUDES ${esma_include}/NUOPC ${esma_include}/MAPL
+)
