--- a/ESMF/Apps/CMakeLists.txt
+++ b/ESMF/Apps/CMakeLists.txt
@@ -1,27 +1,13 @@
+ecbuild_add_executable(
+        TARGET SyntheticApp.x
+        SOURCES SyntheticApp.F90 Synthetic_Driver.F90 Provider_GridComp.F90 Reciever_GridComp.F90
+        LIBS gftl-shared MAPL
+        INCLUDES ${esma_include}/MAPL
+)
+
 #ecbuild_add_executable(
 #        TARGET AerosolApp.x
 #        SOURCES AerosolMain.F90 AerosolDriver.F90 UFS_TestingCap.F90
 #        LIBS gftl-shared MAPL Aerosol_GridComp
 #        INCLUDES ${esma_include}/NUOPC ${esma_include}/MAPL
 #)
-
-#ecbuild_add_executable(
-#        TARGET MAPL-NUOPCApp.x
-#        SOURCES MaplNuopcMain.F90 MaplNuopcDriver.F90 MaplProvide_GridComp.F90 MaplRecieve_GridComp.F90
-#        LIBS gftl-shared MAPL
-#        INCLUDES ${esma_include}/NUOPC ${esma_include}/MAPL
-#)
-
- ecbuild_add_executable(
-         TARGET MediatorApp.x
-         SOURCES MediatorMain.F90 MediatorDriver.F90 Mediator.F90 Mediator_Interpolator.F90 MaplProvide_GridComp.F90 MaplRecieve_GridComp.F90
-         LIBS gftl-shared MAPL
-         INCLUDES ${esma_include}/MAPL
- )
-
-ecbuild_add_executable(
-        TARGET SyntheticApp.x
-        SOURCES SyntheticApp.F90 Synthetic_Driver.F90 Mediator.F90 Mediator_Interpolator.F90 Provider_GridComp.F90 Reciever_GridComp.F90
-        LIBS gftl-shared MAPL
-        INCLUDES ${esma_include}/MAPL
-)
