Added to UFS testing for grid exchange

--- a/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/CMakeLists.txt
+++ b/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/CMakeLists.txt
@@ -11,7 +11,7 @@ set (srcs
 
 esma_add_library(${this}
         SRCS ${srcs}
-        DEPENDENCIES MAPL)
+        DEPENDENCIES MAPL GEOS_Shared)
 
 target_include_directories (${this} PUBLIC ${INC_ESMF} ${INC_NETCDF})
 
