enabled new NUOPC_MAPLcap in test program

--- a/ESMF/Apps/CMakeLists.txt
+++ b/ESMF/Apps/CMakeLists.txt
@@ -1,7 +1,7 @@
 ecbuild_add_executable(
         TARGET SyntheticApp.x
         SOURCES SyntheticApp.F90 Synthetic_Driver.F90 Provider_GridComp.F90 Reciever_GridComp.F90 UFS_TestingCap.F90
-        LIBS gftl-shared MAPL
+        LIBS gftl-shared MAPL MAPL.grid_comp
         INCLUDES ${esma_include}/MAPL
 )
 
