--- a/ESMF/Apps/CMakeLists.txt
+++ b/ESMF/Apps/CMakeLists.txt
@@ -1,14 +1,14 @@
 ecbuild_add_executable(
         TARGET SyntheticApp.x
         SOURCES SyntheticApp.F90 Synthetic_Driver.F90 Provider_GridComp.F90 Reciever_GridComp.F90 UFS_TestingCap.F90
-        LIBS gftl-shared MAPL MAPL.grid_comp
+        LIBS gftl-shared MAPL MAPL.NUOPC
         INCLUDES ${esma_include}/MAPL
 )
 
 ecbuild_add_executable(
         TARGET esmApp.x
         SOURCES esmApp.F90 esm.F90 atm.F90 ocn.F90
-        LIBS gftl-shared MAPL MAPL.grid_comp
+        LIBS gftl-shared MAPL MAPL.NUOPC
         INCLUDES ${esma_include}/MAPL
 )
 
