--- a/ESMF/Apps/CMakeLists.txt
+++ b/ESMF/Apps/CMakeLists.txt
@@ -12,9 +12,9 @@ ecbuild_add_executable(
         INCLUDES ${esma_include}/MAPL
 )
 
-#ecbuild_add_executable(
-#        TARGET AerosolApp.x
-#        SOURCES AerosolMain.F90 AerosolDriver.F90 UFS_TestingCap.F90
-#        LIBS gftl-shared MAPL Aerosol_GridComp
-#        INCLUDES ${esma_include}/NUOPC ${esma_include}/MAPL
-#)
+ecbuild_add_executable(
+        TARGET AerosolApp.x
+        SOURCES AerosolMain.F90 AerosolDriver.F90
+        LIBS gftl-shared MAPL MAPL.NUOPC Aerosol_GridComp
+        INCLUDES ${esma_include}/MAPL
+)
