--- a/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/CMakeLists.txt
+++ b/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/CMakeLists.txt
@@ -4,7 +4,8 @@ set (srcs
         LinearFields.F90
         ConvertUnits_private.F90
         ConvertUnits.F90
-        NOAA_TracersParser.F90
+        NOAA_TracerMap.F90
+        NOAA_GOCARTtracers.F90
         ChemTracers_private.F90
         ChemTracers.F90
         MissingFields.F90
