Renamed a test file

--- a/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/tests/CMakeLists.txt
+++ b/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/tests/CMakeLists.txt
@@ -17,7 +17,7 @@ add_pfunit_ctest(Cinderella_private_tests
 
 add_dependencies(build-tests Cinderella_private_tests)
 
-configure_file(test_ChemTracers.rc  test_ChemTracers.rc  COPYONLY)
-configure_file(field_table          field_table          COPYONLY)
-configure_file(GOCART_Tracers.yaml  GOCART_Tracers.yaml  COPYONLY)
-configure_file(test_ConvertUnits.rc test_ConvertUnits.rc COPYONLY)
+configure_file(test_GOCART_Tracers.rc test_GOCART_Tracers.rc COPYONLY)
+configure_file(field_table            field_table            COPYONLY)
+configure_file(GOCART_Tracers.yaml    GOCART_Tracers.yaml    COPYONLY)
+configure_file(test_ConvertUnits.rc   test_ConvertUnits.rc   COPYONLY)
