Updated Missing Fields and added tests

--- a/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/tests/CMakeLists.txt
+++ b/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ set (TEST_SRCS
         test_ConvertUnits_private.pf
         test_NOAA_TracerMap.pf
         test_NOAA_GOCARTtracers.pf
+        test_MissingFields.pf
 )
 
 add_pfunit_ctest(Cinderella_private_tests
