--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,4 @@ include_directories(${MPI_Fortran_INCLUDE_PATH})
 
 # Recursively build source tree
 add_subdirectory (ESMF)
+add_subdirectory (Process_Library)
