--- a/components.yaml
+++ b/components.yaml
@@ -24,9 +24,8 @@ NCEP_Shared:
 GMAO_Shared:
   local: ./ESMF/Shared/GMAO_Shared@
   remote: ../GMAO_Shared.git
-  tag: v1.1.4
   sparse: ./config/GMAO_Shared.sparse
-  develop: master
+  branch: feature/wjamieson/GOCARTrefactor
 
 MAPL:
   local: ./ESMF/Shared/MAPL@
