--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_GridComp_DU.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_GridComp_DU.rc
@@ -5,7 +5,8 @@
 aerosol_radBands_optics_file: ExtData/MERRA2/x/opticsBands_DU.v15_3.RRTMG.nc 
 
 aerosol_monochromatic_optics_file:ExtData/AeroCom/x/optics_DU.v15_3.nc
-aerosol_monochromatic_optics_wavelength: 470 550 670 870 ! units: nm
+aerosol_monochromatic_optics_wavelength: 4.7e-7 5.5e-7 6.7e-7 8.7e-7 ! units: nm
+n_channels: 4
 
 particle_radius_microns: 0.73 1.4 2.4 4.5 8.0
 
@@ -16,7 +17,7 @@ radius_upper: 1.0 1.8 3.0 6.0 10.0
 source_fraction: 0.1 0.25 0.25 0.25 0.25
 
 # units [kg/m-3]
-soil_density: 2500. 2650. 2650. 2650. 2650.
+particle_density: 2500. 2650. 2650. 2650. 2650.
 
 # Resolution dependent tuning constant for emissions (a,b,c,d,e,f)
 Ch_DU: 0.2 0.2 0.07 0.07 0.07 0.056
@@ -35,11 +36,9 @@ rhFlag: 0
 # Maring settling velocity correction
 maringFlag: .true. 
 
-n_channels: 4
-
-r_channels: 4.7e-7 5.5e-7 6.7e-7 8.7e-7
-
 nbins: 5
 
-#point_emissions_srcfilen:  /gpfsm/dnb32/esherman/GOCART_REFACTOR_develop1/RC/dust_point_src_test.rc
+pressure_lid_in_hPa: 0.01
+
+#point_emissions_srcfilen: /gpfsm/dnb32/esherman/gocartRefactor/RC/CA2G_point_src_test.rc
 
