--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/CMakeLists.txt
@@ -2,10 +2,10 @@ esma_set_this ()
 
 esma_add_library (${this}
   SRCS ${this}Mod.F90
-  DEPENDENCIES GA_GridComp Chem_Shared2G)
+  DEPENDENCIES GA_GridComp MAPL Chem_Shared2G)
 target_include_directories (${this} PUBLIC ${INC_ESMF} ${INC_NETCDF})
 
-mapl_acg (${this}   SS2G_StateSpecs.rc 
+mapl_acg (${this}   SU2G_StateSpecs.rc 
           IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS 
           GET_POINTERS DECLARE_POINTERS)
 
@@ -14,5 +14,3 @@ foreach ( file ${rc_files} )
    get_filename_component( dir ${file} DIRECTORY )
    install( FILES ${file} DESTINATION etc/${dir} )
 endforeach()
-
-
