Updated GOCART2G targets

--- a/ESMF/GOCART2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/CMakeLists.txt
@@ -21,7 +21,7 @@ install( FILES ${resource_files}
    DESTINATION etc
    )
 
-set (dependencies MAPL Chem_Shared2G)
+set (dependencies MAPL Chem_Shared2G Process_Library)
 esma_add_library (${this}
   SRCS ${srcs}
   SUBCOMPONENTS ${alldirs}
