--- a/ESMF/GOCART2G_GridComp/GA_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/GA_GridComp/CMakeLists.txt
@@ -2,6 +2,6 @@ esma_set_this ()
 
 esma_add_library (${this}
   SRCS ${this}Mod.F90
-  DEPENDENCIES MAPL Chem_Shared2G
+  DEPENDENCIES MAPL Chem_Shared2G Process_Library
   )
 
