Fixed build issue

--- a/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/CMakeLists.txt
+++ b/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/CMakeLists.txt
@@ -9,7 +9,7 @@ if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/AeroCinderella_GridComp.F90)
     esma_add_library (${this}
             SRCS AeroCinderella_GridComp.F90
             SUBCOMPONENTS ${alldirs}
-            DEPENDENCIES MAPL GEOS_Shared Chem_Shared
+            DEPENDENCIES MAPL GEOS_Shared
             INCLUDES ${INC_ESMF})
 
     mapl_acg (${this} AeroCinderella_StateSpecs.rc
