Commented out unnecessary files so that building can proceed. These will readded, but sparsed out later

--- a/ESMF/CMakeLists.txt
+++ b/ESMF/CMakeLists.txt
@@ -3,9 +3,9 @@ set (MAPL_ESMF TRUE)
 set (BUILD_GEOS_INTERFACE TRUE)
 
 esma_add_subdirectories(
-        Apps
+        # Apps
         Shared
-        Aerosol_GridComp
+        # Aerosol_GridComp
         # GOCART_GridComp
         GOCART2G_GridComp
 #        HEMCO_GridComp
