Updated GMAO_Shared to a tag

--- a/components.yaml
+++ b/components.yaml
@@ -19,13 +19,14 @@ NCEP_Shared:
   remote: ../NCEP_Shared.git
   tag: v1.0.0
   sparse: ./config/NCEP_Shared.sparse
-  develop: master
+  develop: main
 
 GMAO_Shared:
   local: ./ESMF/Shared/GMAO_Shared@
   remote: ../GMAO_Shared.git
+  tag: v1.1.8
   sparse: ./config/GMAO_Shared.sparse
-  branch: feature/wjamieson/GOCARTrefactor
+  develop: main
 
 MAPL:
   local: ./ESMF/Shared/MAPL@
