Fixed test building issues

--- a/Process_Library/tests/CMakeLists.txt
+++ b/Process_Library/tests/CMakeLists.txt
@@ -11,8 +11,10 @@ set(SRCS
 add_pfunit_ctest(Process_Library_tests.x
     TEST_SOURCES ${TEST_SRCS}
     OTHER_SOURCES ${SRCS}
-    # LINK_LIBRARIES Process_Library
+    LINK_LIBRARIES Process_Library
     MAX_PES 4
     )
+
+add_dependencies(build-tests Process_Library_tests.x)
 
 set_tests_properties(Process_Library_tests.x PROPERTIES LABELS "Process_Library")
