--- a/Process_Library/CMakeLists.txt
+++ b/Process_Library/CMakeLists.txt
@@ -3,6 +3,7 @@ esma_set_this ()
 set (srcs
   Chem_MieTableMod2G.F90
   GOCART2G_Process.F90
+  EmissionReaderMod.F90
   )
 
 esma_add_library(${this}
