--- a/Process_Library/CMakeLists.txt
+++ b/Process_Library/CMakeLists.txt
@@ -4,6 +4,7 @@ set (srcs
   Chem_MieTableMod2G.F90
   GOCART2G_Process.F90
   EmissionReaderMod.F90
+  DustEmissionsMod.F90
   )
 
 esma_add_library(${this}
