testing daignostic variables

--- a/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
+++ b/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
@@ -25,7 +25,7 @@ PASSIVE_INSTANCES_DU:
 ACTIVE_INSTANCES_SS:   SS #  SS.data
 PASSIVE_INSTANCES_SS:
 
-ACTIVE_INSTANCES_SU:  
+ACTIVE_INSTANCES_SU: SU   #SU.data 
 PASSIVE_INSTANCES_SU:
 
 ACTIVE_INSTANCES_CA:  CA.oc CA.bc #CA.oc.data CA.bc.datac 
