--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
@@ -38,31 +38,31 @@ category: EXPORT
 #----------------------------------------------------------------------------------------
  NAME       | UNITS      | DIMS| VLOC| UNGRIDDED | LONG_NAME
 #----------------------------------------------------------------------------------------
- DUMASS     | kg kg-1    | xyz | C  |            | Dust Mass Mixing Ratio                      __ENSEMBLE__
- DUMASS25   | kg kg-1    | xyz | C  |            | Dust Mass Mixing Ratio                      __ENSEMBLE__
- DUCONC     | kg m-3     | xyz | C  |            | Dust Mass Concentration                     __ENSEMBLE__
- DUEXTCOEF  | m-1        | xyz | C  |            | Dust Extinction Coefficient [550 nm]        __ENSEMBLE__
- DUSCACOEF  | m-1        | xyz | C  |            | Dust Scattering Coefficient [550 nm]        __ENSEMBLE__
+ DUMASS     | kg kg-1    | xyz | C  |            | Dust Mass Mixing Ratio
+ DUMASS25   | kg kg-1    | xyz | C  |            | Dust Mass Mixing Ratio
+ DUCONC     | kg m-3     | xyz | C  |            | Dust Mass Concentration
+ DUEXTCOEF  | m-1        | xyz | C  |            | Dust Extinction Coefficient [550 nm]
+ DUSCACOEF  | m-1        | xyz | C  |            | Dust Scattering Coefficient [550 nm]
 #........................................................................................
- DUSMASS    | kg m-3     | xy  | N  |            | Dust Surface Mass Concentration             __ENSEMBLE__
- DUCMASS    | kg m-2     | xy  | N  |            | Dust Column Mass Density                    __ENSEMBLE__
- DUEXTTAU   |    1       | xy  | N  |            | Dust Extinction AOT [550 nm]                __ENSEMBLE__
- DUSCATAU   |    1       | xy  | N  |            | Dust Scattering AOT [550 nm]                __ENSEMBLE__
- DUSMASS25  | kg m-3     | xy  | N  |            | Dust Surface Mass Concentration - PM 2.5    __ENSEMBLE__
- DUCMASS25  | kg m-2     | xy  | N  |            | Dust Column Mass Density - PM 2.5           __ENSEMBLE__
- DUEXTT25   |    1       | xy  | N  |            | Dust Extinction AOT [550 nm] - PM 2.5       __ENSEMBLE__
- DUSCAT25   |    1       | xy  | N  |            | Dust Scattering AOT [550 nm] - PM 2.5       __ENSEMBLE__
- DUAERIDX   |    1       | xy  | N  |            | Dust TOMS UV Aerosol Index                  __ENSEMBLE__
- DUFLUXU    | kg m-1 s-1 | xy  | N  |            | Dust column u-wind mass flux                __ENSEMBLE__
- DUFLUXV    | kg m-1 s-1 | xy  | N  |            | Dust column v-wind mass flux                __ENSEMBLE__  
- DUEXTTFM   |    1       | xy  | N  |            | Dust Extinction AOT [550 nm] - PM 1.0 um    __ENSEMBLE__  
- DUSCATFM   |    1       | xy  | N  |            | Dust Scattering AOT [550 nm] - PM 1.0 um    __ENSEMBLE__  
- DUANGSTR   |    1       | xy  | N  |            | Dust Angstrom parameter [470-870 nm]        __ENSEMBLE__
- DUEM       | kg m-2 s-1 | xy  | N  | self%nbins | Dust Emission All Bins                  __ENSEMBLE__
- DUSD       | kg m-2 s-1 | xy  | N  | self%nbins | Dust Sedimentation All Bins             __ENSEMBLE__
- DUDP       | kg m-2 s-1 | xy  | N  | self%nbins | Dust Dry Deposition All Bins            __ENSEMBLE__
- DUWT       | kg m-2 s-1 | xy  | N  | self%nbins | Dust Wet Deposition All Bins            __ENSEMBLE__
- DUSV       | kg m-2 s-1 | xy  | N  | self%nbins | Dust Convective Scavenging All Bins     __ENSEMBLE__
+ DUSMASS    | kg m-3     | xy  | N  |            | Dust Surface Mass Concentration
+ DUCMASS    | kg m-2     | xy  | N  |            | Dust Column Mass Density
+ DUEXTTAU   |    1       | xy  | N  |            | Dust Extinction AOT [550 nm]
+ DUSCATAU   |    1       | xy  | N  |            | Dust Scattering AOT [550 nm]
+ DUSMASS25  | kg m-3     | xy  | N  |            | Dust Surface Mass Concentration - PM 2.5
+ DUCMASS25  | kg m-2     | xy  | N  |            | Dust Column Mass Density - PM 2.5
+ DUEXTT25   |    1       | xy  | N  |            | Dust Extinction AOT [550 nm] - PM 2.5
+ DUSCAT25   |    1       | xy  | N  |            | Dust Scattering AOT [550 nm] - PM 2.5
+ DUAERIDX   |    1       | xy  | N  |            | Dust TOMS UV Aerosol Index
+ DUFLUXU    | kg m-1 s-1 | xy  | N  |            | Dust column u-wind mass flux
+ DUFLUXV    | kg m-1 s-1 | xy  | N  |            | Dust column v-wind mass flux  
+ DUEXTTFM   |    1       | xy  | N  |            | Dust Extinction AOT [550 nm] - PM 1.0 um  
+ DUSCATFM   |    1       | xy  | N  |            | Dust Scattering AOT [550 nm] - PM 1.0 um  
+ DUANGSTR   |    1       | xy  | N  |            | Dust Angstrom parameter [470-870 nm]
+ DUEM       | kg m-2 s-1 | xy  | N  | self%nbins | Dust Emission All Bins
+ DUSD       | kg m-2 s-1 | xy  | N  | self%nbins | Dust Sedimentation All Bins
+ DUDP       | kg m-2 s-1 | xy  | N  | self%nbins | Dust Dry Deposition All Bins
+ DUWT       | kg m-2 s-1 | xy  | N  | self%nbins | Dust Wet Deposition All Bins
+ DUSV       | kg m-2 s-1 | xy  | N  | self%nbins | Dust Convective Scavenging All Bins
 
 
 category: INTERNAL
