Remove dependency from GEOS_Shared.

--- a/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/CMakeLists.txt
+++ b/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/CMakeLists.txt
@@ -6,12 +6,13 @@ set (srcs
         ConvertUnits.F90
         NOAA_TracerMap.F90
         NOAA_GOCARTtracers.F90
-        MissingFields.F90
+#       MissingFields.F90
         )
 
 esma_add_library(${this}
         SRCS ${srcs}
-        DEPENDENCIES MAPL GEOS_Shared)
+        DEPENDENCIES MAPL)
+#       DEPENDENCIES MAPL GEOS_Shared)
 
 target_include_directories (${this} PUBLIC ${INC_ESMF} ${INC_NETCDF})
 
