--- a/ESMF/Aerosol_GridComp/CMakeLists.txt
+++ b/ESMF/Aerosol_GridComp/CMakeLists.txt
@@ -9,8 +9,8 @@ if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Aerosol_GridComp.F90)
     esma_add_library (${this}
             SRCS Aerosol_GridComp.F90
             SUBCOMPONENTS ${alldirs}
-            DEPENDENCIES MAPL GEOS_Shared
-            INCLUDES ${INC_ESMF})
+            DEPENDENCIES MAPL esmf)
+#           DEPENDENCIES MAPL GEOS_Shared esmf)
 
     mapl_acg (${this} Aerosol_StateSpecs.rc
             IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS
