Enable standalone build and install based on external libraries.

--- a/ESMF/Apps/CMakeLists.txt
+++ b/ESMF/Apps/CMakeLists.txt
@@ -1,13 +1,13 @@
-ecbuild_add_executable(
-        TARGET SyntheticApp.x
-        SOURCES SyntheticApp.F90 Synthetic_Driver.F90 Provider_GridComp.F90 Reciever_GridComp.F90 UFS_TestingCap.F90
-        LIBS gftl-shared MAPL MAPL.NUOPC
-        INCLUDES ${esma_include}/MAPL
-)
+add_executable(SyntheticApp.x
+  SyntheticApp.F90 Synthetic_Driver.F90 Provider_GridComp.F90 Reciever_GridComp.F90 UFS_TestingCap.F90
+  )
+target_link_libraries(SyntheticApp.x PRIVATE
+  gftl gftl-shared yafyaml pflogger MAPL MAPL.NUOPC
+  )
 
-ecbuild_add_executable(
-        TARGET AerosolApp.x
-        SOURCES AerosolMain.F90 AerosolDriver.F90
-        LIBS gftl-shared MAPL MAPL.NUOPC Aerosol_GridComp
-        INCLUDES ${esma_include}/MAPL
-)
+add_executable(AerosolApp.x
+  AerosolMain.F90 AerosolDriver.F90
+  )
+target_link_libraries(AerosolApp.x PRIVATE
+  Aerosol_GridComp
+  )
