--- a/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/CMakeLists.txt
+++ b/ESMF/Aerosol_GridComp/AeroCinderella_GridComp/Cinderella/CMakeLists.txt
@@ -11,10 +11,8 @@ set (srcs
 
 esma_add_library(${this}
         SRCS ${srcs}
-        DEPENDENCIES MAPL)
-#       DEPENDENCIES MAPL GEOS_Shared)
-
-target_include_directories (${this} PUBLIC ${INC_ESMF} ${INC_NETCDF})
+        DEPENDENCIES MAPL esmf NetCDF::NetCDF_Fortran gftl-shared yafyaml pfunit pflogger
+        )
 
 if (PFUNIT_FOUND)
     add_subdirectory(tests EXCLUDE_FROM_ALL)
