--- a/ESMF/GOCART2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/CMakeLists.txt
@@ -21,10 +21,9 @@ install( FILES ${resource_files}
    DESTINATION etc
    )
 
-set (dependencies MAPL Chem_Shared2G Process_Library)
+set (dependencies MAPL Chem_Shared2G Process_Library esmf)
 esma_add_library (${this}
   SRCS ${srcs}
   SUBCOMPONENTS ${alldirs}
   DEPENDENCIES ${dependencies}
-  INCLUDES ${INC_ESMF})
-
+  )
