--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/CMakeLists.txt
@@ -2,7 +2,7 @@ esma_set_this ()
 
 esma_add_library (${this}
   SRCS ${this}Mod.F90
-  DEPENDENCIES GA_GridComp MAPL Chem_Shared2G GMAO_mpeu Process_Library esmf NetCDF::NetCDF_Fortran)
+  DEPENDENCIES GA_GridComp MAPL Chem_Shared2G Process_Library esmf NetCDF::NetCDF_Fortran)
 
 mapl_acg (${this}   DU2G_StateSpecs.rc 
           IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS 
