Combined update featuring: - initialize, run, and finalize MAPL Cap - enable single NUOPC run phase - enable running GOCART2G grid component - add NUOPC import and export fields - add NUOPC field diagnostics - export NUOPC imported tracer as imported - provide imported grid from NUOPC fields to   MAPL Cap gridded component, which can be   passed to GOCART2G gridded component thanks   to preliminary changes to MAPL

--- a/ESMF/CMakeLists.txt
+++ b/ESMF/CMakeLists.txt
@@ -5,6 +5,7 @@ set (BUILD_GEOS_INTERFACE TRUE)
 
 if (BUILD_UFS)
   esma_add_subdirectories(
+    Aerosol_GridComp
     GOCART2G_GridComp
     Shared
     UFS
