--- a/ESMF/UFS/CMakeLists.txt
+++ b/ESMF/UFS/CMakeLists.txt
@@ -2,9 +2,10 @@ esma_set_this ()
 
 set (srcs
   Aerosol_Cap.F90
+  Aerosol_Comp_Mod.F90
   )
 
-set (dependencies GOCART2G_GridComp esmf)
+set (dependencies Aerosol_GridComp MAPL esmf)
 esma_add_library (${this}
   SRCS ${srcs}
   DEPENDENCIES ${dependencies})
