--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
@@ -46,11 +46,11 @@ category: EXPORT
  SSEXTCOEF | m-1        | xyz | C   |            | Sea Salt Extinction Coefficient [550 nm]
  SSSCACOEF | m-1        | xyz | C   |            | Sea Salt Scattering Coefficient [550 nm]
 #..........|............|.....|.....|............|..................................
- SSEM      | kg m-2 s-1 | xy  | N   | self%nbins | Sea Salt Emission All Bins 
- SSSD      | kg m-2 s-1 | xy  | N   | self%nbins | Sea Salt Sedimentation All Bins
- SSDP      | kg m-2 s-1 | xy  | N   | self%nbins | Sea Salt Dry Deposition All Bins
- SSWT      | kg m-2 s-1 | xy  | N   | self%nbins | Sea Salt Wet Deposition All Bins
- SSSV      | kg m-2 s-1 | xy  | N   | self%nbins | Sea Salt Convective Scavenging All Bins
+ SSEM      | kg m-2 s-1 | xy  | N   | self%nbins | Sea Salt Emission (Bin %d) 
+ SSSD      | kg m-2 s-1 | xy  | N   | self%nbins | Sea Salt Sedimentation (Bin %d)
+ SSDP      | kg m-2 s-1 | xy  | N   | self%nbins | Sea Salt Dry Deposition (Bin %d)
+ SSWT      | kg m-2 s-1 | xy  | N   | self%nbins | Sea Salt Wet Deposition (Bin %d)
+ SSSV      | kg m-2 s-1 | xy  | N   | self%nbins | Sea Salt Convective Scavenging (Bin %d)
  SSSMASS   | kg m-3     | xy  | N   |            | Sea Salt Surface Mass Concentration
  SSCMASS   | kg m-2     | xy  | N   |            | Sea Salt Column Mass Density
  SSEXTTAU  |    1       | xy  | N   |            | Sea Salt Extinction AOT [550 nm]
@@ -73,7 +73,7 @@ category: INTERNAL
 #----------------------------------------------------------------------------------------
   NAME | UNITS | DIMS | VLOC | UNGRIDDED | RESTART | ADD2EXPORT | FRIENDLYTO | LONG NAME
 #----------------------------------------------------------------------------------------
- SS    |kg kg-1| xyz  | C    | self%nbins | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Sea Salt Mixing Ratio all bins
+ SS    |kg kg-1| xyz  | C    | self%nbins | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Sea Salt Mixing Ratio (bin %d)
 
 
 #********************************************************
