--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_StateSpecs.rc
@@ -37,12 +37,12 @@ category: IMPORT
 # SU_OH       | 1      | xyz  | C    | climatological OH source
 # SU_H2O2     | 1      | xyz  | C    | climatological H2O2 source
 #........................................................................................
- SU_BIOMASS  | 1      | xy   | N   | biomass burning source species
- SU_ANTHROL1 | 1      | xy   | N   | source species
- SU_ANTHROL2 | 1      | xy   | N   | source species
- SU_SHIPSO2  | 1      | xy   | N   | source species
- SU_SHIPSO4  | 1      | xy   | N   | source species
- SU_DMSO     | 1      | xy   | N   | source species
+ SU_BIOMASS  | 1      | xy   | N   | biomass burning emissions
+ SU_ANTHROL1 | 1      | xy   | N   | anthropogenic BF emissions
+ SU_ANTHROL2 | 1      | xy   | N   | anthropogenic FF emissions
+ SU_SHIPSO2  | 1      | xy   | N   | SO2 ship emissions
+ SU_SHIPSO4  | 1      | xy   | N   | SO4 ship emissions
+ SU_DMSO     | 1      | xy   | N   | DMS emissions
  SU_AVIATION_LTO | 1  | xy   | N   | Landing/Take-off aircraft source species
  SU_AVIATION_CDS | 1  | xy   | N   | Climb/Descent aircraft source species
  SU_AVIATION_CRS | 1  | xy   | N   | Cruise aircraft source species
@@ -53,11 +53,11 @@ category: EXPORT
 #----------------------------------------------------------------------------------------
  NAME      | UNITS      | DIMS| VLOC | UNGRIDDED  | LONG NAME
 #----------------------------------------------------------------------------------------
- SUEM      | kg m-2 s-1 | xy  | N    | self%nbins | Sulfer Emission All Bins 
- SUDP      | kg m-2 s-1 | xy  | N    | self%nbins | Sulfate Dry Deposition All Bins
- SUSD      | kg m-2 s-1 | xy  | N    | self%nbins | Sulfate Settling All Bins
- SUWT      | kg m-2 s-1 | xy  | N    | self%nbins | Sulfate Wet Deposition All Bins
- SUSV      | kg m-2 s-1 | xy  | N    | self%nbins | Sulfate Convective Scavenging All Bins
+ SUEM      | kg m-2 s-1 | xy  | N    | self%nbins | Sulfer Emission (Bin %d) 
+ SUDP      | kg m-2 s-1 | xy  | N    | self%nbins | Sulfate Dry Deposition (Bin %d)
+ SUSD      | kg m-2 s-1 | xy  | N    | self%nbins | Sulfate Settling (Bin %d)
+ SUWT      | kg m-2 s-1 | xy  | N    | self%nbins | Sulfate Wet Deposition (Bin %d)
+ SUSV      | kg m-2 s-1 | xy  | N    | self%nbins | Sulfate Convective Scavenging (Bin %d)
  SO4EMAN   | kg m-2 s-1 | xy  | N    |            | SO4 Anthropogenic Emissions
  SO2EMAN   | kg m-2 s-1 | xy  | N    |            | SO2 Anthropogenic Emissions
  SO2EMBB   | kg m-2 s-1 | xy  | N    |            | SO2 Biomass Burning Emissions
