--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CMakeLists.txt
@@ -2,7 +2,7 @@ esma_set_this ()
 
 esma_add_library (${this}
   SRCS ${this}Mod.F90
-  DEPENDENCIES GA_GridComp Chem_Shared2G GMAO_mpeu Process_Library)
+  DEPENDENCIES GA_GridComp Chem_Shared2G Process_Library)
 target_include_directories (${this} PUBLIC ${INC_ESMF} ${INC_NETCDF})
 
 mapl_acg (${this}   CA2G_StateSpecs.rc 
