'GOCART2G now exports total diagnostic aerosol varaibles.'

--- a/ESMF/GOCART2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/CMakeLists.txt
@@ -28,3 +28,6 @@ esma_add_library (${this}
   DEPENDENCIES ${dependencies}
   INCLUDES ${INC_ESMF})
 
+mapl_acg (${this}   GOCART2G_StateSpecs.rc 
+          IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS 
+          GET_POINTERS DECLARE_POINTERS)
