--- a/ESMF/Shared/Configuration/CMakeLists.txt
+++ b/ESMF/Shared/Configuration/CMakeLists.txt
@@ -1,15 +1,13 @@
 esma_set_this()
 
 set (srcs
-        LinearFields.F90
-        ConvertUnits_private.F90
-        ConvertUnits.F90
-        MissingFields.F90
+        NOAA_TracerMap.F90
+        NOAA_GOCARTtracers.F90
         )
 
 esma_add_library(${this}
         SRCS ${srcs}
-        DEPENDENCIES MAPL GEOS_Shared)
+        DEPENDENCIES MAPL)
 
 target_include_directories (${this} PUBLIC ${INC_ESMF} ${INC_NETCDF})
 
