Renamed some files

--- a/ESMF/Shared/Configuration/CMakeLists.txt
+++ b/ESMF/Shared/Configuration/CMakeLists.txt
@@ -1,7 +1,7 @@
 esma_set_this()
 
 set (srcs
-        NOAA_TracerMap.F90
+        NOAA_Tracers.F90
         NOAA_MAPLconfig.F90
         NOAA_GOCARTtracers.F90
         )
